--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans:ital,wght@1,700&display=swap');
+
 #content {
     max-width: 1600px;
     margin: 0 auto;
@@ -6,10 +8,15 @@
 nav a {
     text-align: center;
     text-decoration: none;
-    color: #FCBF49; 
+    color: #FCBF49;
+    padding: 35px;
 }
 
-#hero-msg h1, #hero-msg h4 {
+#hero-msg h1 {
+    text-align: center;
+}
+
+#hero-msg h4 {
     text-align: center;
 }
 
@@ -28,6 +35,10 @@ main section {
 
 body {
     background-color: white;
+    font-family: Montserrat, Arial, sans-serif;
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
 }
 
 header {
@@ -40,21 +51,19 @@ nav a:hover {
     color: #003049;
 }
 
-.book {
+.book, .join {
     background-color: #003049;
     color: #FCBF49;
     text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 
 .book:hover {
     background-color: #FCBF49;
     color: #003049;
-}
-
-.join {
-    background-color: #003049;
-    color: #FCBF49;
-    text-decoration: none;
 }
 
 .join:hover {
@@ -64,11 +73,15 @@ nav a:hover {
 
 footer {
     background-color: #003049;
-    color: #FCBF49; 
+    color: #FCBF49;
+    padding: 25px 50px;
+    margin-top: 200px;
 }
 
 .msg {
     background-color: #FCBF49;
+    line-height: 1.5em;
+    padding: 35px;
 }
 
 footer a {
@@ -82,6 +95,7 @@ footer a {
 
 .icon {
     width: 80px;
+    padding-top: 10px;
 }
 
 #hero-img {
@@ -98,6 +112,9 @@ footer p a:hover {
 
 .home-title {
     color: #118AB2;
+    font-family: "Open Sans", "Times New Roman", sans-serif;
+    font-size: 2em;
+    margin-top: 10px;
 }
 
 h4 {
@@ -106,12 +123,39 @@ h4 {
 
 .msg h2 {
     color: #003049;
+    font-family: "Open Sans", "Times New Roman", sans-serif;
 }
 
 .msg p {
     color: #003049;
+    font-size: .8em;
+    padding-bottom: 15px;
 }
 
 footer a:hover {
     color: white;
+}
+
+h2 {
+    margin: 0;
+}
+
+#logo_link {
+    padding-top: 5px;
+}
+
+footer .social img {
+    padding-top: 15px;
+}
+
+.rivers-card, .camping-card, .rapids-card {
+    margin: 200px 0;
+}
+
+.card-img {
+    border: 10px solid #003049;
+}
+
+main section img {
+    box-sizing: border-box;
 }
