--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -159,3 +159,8 @@ footer .social img {
 main section img {
     box-sizing: border-box;
 }
+
+.mountains {
+    margin-top: 100px;
+    margin-bottom: 200px;
+}
