--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -17,6 +17,7 @@ nav a {
 }
 
 #hero-msg h4 {
+    color: #118AB2;
     text-align: center;
 }
 
@@ -79,7 +80,7 @@ footer {
     background-color: #003049;
     color: #FCBF49;
     padding: 25px 50px;
-    margin-top: 200px;
+    margin-top: 50px;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -125,10 +126,6 @@ footer p a:hover {
     font-family: "Open Sans", "Times New Roman", sans-serif;
     font-size: 2em;
     margin-top: 10px;
-}
-
-h4 {
-    color: #118AB2;
 }
 
 .msg h2 {
@@ -232,6 +229,68 @@ nav {
     grid-row: 2/3;
 }
 
+/* Start CSS for subpage rivers.html here*/
+
+.subpage-title {
+    color: #118AB2;
+    font-family: "Open Sans", "Times New Roman", sans-serif;
+    font-size: 2em;
+    text-align: center;
+    margin-top: 50px;
+}
+
+.river-grid {
+    margin: 30px;
+}
+
+.river-grid-left {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    column-gap: 30px;
+    margin-top: 30px;
+}
+
+.rivers-description {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    background-color: #FCBF49;
+    padding: 0 30px;
+    text-align: left;
+    color: #003049;
+    box-shadow: 5px 5px 10px black;
+}
+
+.river-grid-right {
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    column-gap: 30px;
+    margin-top: 30px;
+}
+
+.desolation-river-description {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    background-color: #FCBF49;
+    color: #003049;
+    padding: 0 30px;
+    text-align: left;
+    box-shadow: 5px 5px 10px black;
+}
+
+.river-grid img {
+    width: 100%;
+    height: 100%;
+}
+
+.shaded {
+    color: #118AB2;
+    font-family: "Open Sans", "Times New Roman", sans-serif;
+    /*font-size: 1.5em;*/
+    text-align: left;
+    margin-top: 30px;
+}
+
+
 @media screen and (max-width: 900px) {
     #hero, .home-grid {
         display: block;
@@ -271,5 +330,26 @@ nav {
     }
     footer {
         margin-top: 25px;
+    }
+    .river-grid-left {
+        display: block;
+    }
+    .river-grid-right {
+        display: block;
+    }
+    
+    .river-grid {
+        display: block;
+    }
+    .river-grid img {
+        width: 100%;
+    }
+    .rivers-description {
+        padding: 10px 30px;
+        margin-top: 10px;
+    }
+    .desolation-river-description {
+        padding: 10px 30px;
+        margin-top: 10px;
     }
 }
