--- a/Animes_News/styles/site-plan.css
+++ b/Animes_News/styles/site-plan.css
@@ -16,11 +16,11 @@ Fonts are separated by a | */
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #118AB2;  /* headlines on a white background */ 
-  --headline-color-on-color: #FFFFFF; /* headlines on a colored background */ 
+  --headline-color-on-color: #ffffff; /* headlines on a colored background */ 
   --paragraph-color-on-white: #118AB2; /* paragraph text on a white background */ 
   --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
   --paragraph-background-color: #003049  ;
-  --nav-link-color: white;
+  --nav-link-color: #FCBF49;
   --nav-background-color: #003049;
   --nav-hover-link-color: #003049;
   --nav-hover-background-color: #FCBF49;
