--- a/Animes_News/styles/style.css
+++ b/Animes_News/styles/style.css
@@ -24,7 +24,7 @@ header {
     background-color: #003049;
     color: #FCBF49;
     display: grid;
-    grid-template-columns: 150px auto; 
+    grid-template-columns: 150px auto;
 }
 
 nav {
@@ -115,8 +115,14 @@ aside {
     color: #003049;
 }
 
+.table-ranking {
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
 .table-ranking img {
     padding: 5px;
+    /*width: 173px;*/
 }
 
 .table-ranking div {
@@ -142,6 +148,48 @@ aside {
     padding-right: 15px;
     align-self: center;
 }
+
+.full-width-img {
+    width: 100%;
+    margin-bottom: 30px;
+}
+
+.table-ranking-align {
+    display: grid;
+    grid-template-columns: 173px auto;
+}
+
+.table-ranking-align img {
+    width: 173px;
+    padding: 10px;
+}
+
+.table-ranking-align div {
+    margin-left: 30px;
+    font-size: larger;
+}
+
+#myBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: #FCBF49;
+    color: #003049;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 4px;
+}
+  
+#myBtn:hover {
+    background-color: #555;
+    color: white;
+}
+  
 
 footer {
     background-color: #003049;
@@ -198,5 +246,4 @@ footer .social img {
     .table-news {
         width: 100%;
     }
-
 }
