--- a/Animes_News/styles/style.css
+++ b/Animes_News/styles/style.css
@@ -213,6 +213,27 @@ aside {
     width: 100px;
 }
   
+/* Start CSS for subpage anime-rankings.html here*/
+
+.anime-events-page {
+    margin-left: 85px;
+    margin-right: 85px;
+}
+
+.event-grid {
+    display: grid;
+    grid-template-columns: auto;
+}
+
+.event-grid img {
+    width: 100%;
+    height: 480px;
+    margin-top: 30px;
+}
+
+.anime-events-paragraph {
+    margin-top: 20px;
+}
 
 footer {
     background-color: #003049;
@@ -290,5 +311,9 @@ footer .social img {
     }
     .table-title-section {
         width: 140px;
+    }
+    .anime-events-page {
+        margin-left: 30px;
+        margin-right: 30px;
     }
 }
